assn8/src/test/resources/examples/type-err/112-var-assign.calc
var k = 3;  # integer variable
k = 3.14;   # cannot assign a float
